<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:alpha="123"
        android:fontFamily="sans-serif-black"
        android:text="@string/texTitle"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="376dp"
        android:layout_height="36dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="16dp"
        android:text="@string/textView"
        app:layout_constraintBottom_toTopOf="@+id/switchTrain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Switch
        android:id="@+id/switchTrain"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/switchTrain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchAirplane"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:layout_marginTop="52dp"
        android:text="@string/switchAirplane"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.856"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:id="@+id/switchOwnCar"
        android:layout_width="105dp"
        android:layout_height="27dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="88dp"
        android:text="@string/switch0wnCar"
        app:layout_constraintStart_toEndOf="@+id/switchTrain"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />

    <SeekBar
        android:id="@+id/seekPrice"
        android:layout_width="118dp"
        android:layout_height="20dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="80dp"
        android:max="100"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />

    <TextView
        android:id="@+id/textPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/textPrice"
        app:layout_constraintStart_toEndOf="@+id/seekPrice"
        app:layout_constraintTop_toBottomOf="@+id/switchAirplane" />

    <Button
        android:id="@+id/buttonDeparture"
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/btnDeparture"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonArrival"
        android:layout_width="187dp"
        android:layout_height="51dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:text="@string/btnArrival"
        android:textSize="11sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekPrice" />

    <TextView
        android:id="@+id/textDateDeparture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />

    <TextView
        android:id="@+id/textDateArrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="48dp"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonArrival" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="44dp"
        android:text="@string/textView5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:text="@string/textView6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDays" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/textView7"
        app:layout_constraintStart_toEndOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/editHours" />

    <EditText
        android:id="@+id/editDays"
        android:layout_width="26dp"
        android:layout_height="33dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editHours"
        android:layout_width="26dp"
        android:layout_height="33dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="10sp"
        app:layout_constraintStart_toEndOf="@+id/editDays"
        app:layout_constraintTop_toBottomOf="@+id/buttonDeparture" />

    <EditText
        android:id="@+id/editTextNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="152dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="54dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTrain"
        app:layout_constraintVertical_bias="0.988"
        app:srcCompat="@drawable/air_icon" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="58dp"
        android:layout_height="49dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="67dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/switchOwnCar"
        app:srcCompat="@drawable/auto_iconoff" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="56dp"
        android:layout_height="50dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toStartOf="@+id/imageView3"
        app:layout_constraintHorizontal_bias="0.228"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switchTrain"
        app:srcCompat="@drawable/train_iconoff" />

</androidx.constraintlayout.widget.ConstraintLayout>

